<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="about_alc">ABOUT ALC</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="welcome_to_alc_4_0">Welcome to ALC 4.0</string>
    <string name="email_akiyofidel_gmail_com">Email: akiyofidel@gmail.com</string>
    <string name="country_uganda">Country:     Uganda</string>
    <string name="slack_username_fidelakiyo">Slack Username: @fidelakiyo</string>
    <string name="phone_number_256703544310">Phone number: +256703544310</string>
</resources>
