<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@color/Background_grey">

    <TextView
            android:id="@+id/TVwelcome_message"
            android:text="@string/welcome_to_alc_4_0"
            android:textSize="@dimen/TEXT_LARGE"
            android:textColor="@color/Accent_ALC"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textStyle="bold" android:textAlignment="center"
            android:padding="2pt"/>

    <Button
            android:id="@+id/about_button"
            android:padding="6dp"
            android:background="@drawable/button_corners_resource"
            android:textSize="@dimen/TEXT_LARGE"
            android:text="@string/about_alc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TVwelcome_message" android:layout_marginTop="96dp"/>

    <Button
            android:id="@+id/profile_button"
            android:padding="6dp"
            android:background="@drawable/button_corners_resource"
            android:textSize="@dimen/TEXT_LARGE"
            android:text="@string/my_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="64dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="64dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/about_button"
            android:layout_marginTop="32dp"/>

</android.support.constraint.ConstraintLayout>