<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Profile"
        android:background="@color/Background_grey">


    <ImageView
            android:layout_width="0dp"
            android:layout_height="@android:dimen/thumbnail_height"
            tools:srcCompat="@drawable/akdp"
            android:id="@+id/IVprofilepic"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
    <TextView
            android:text="Akiyo Fidel"
            android:textSize="@dimen/TEXT_LARGE"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/TVName"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/IVprofilepic" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"/>

    <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/text_Background_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TVName" android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp" android:layout_marginStart="8dp"/>
    <TextView
            android:text="Track:  Android "
            android:textSize="@dimen/TEXT_SMALL"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/TVTrackname"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/TVName"
            android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
    />

    <TextView
            android:text="@string/country_uganda"
            android:textSize="@dimen/TEXT_SMALL"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/TVCountry"
            app:layout_constraintStart_toStartOf="@+id/TVTrackname"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/TVTrackname"/>
    <TextView
            android:text="@string/email_akiyofidel_gmail_com"
            android:textSize="@dimen/TEXT_SMALL"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/TVEmail" app:layout_constraintStart_toStartOf="@+id/TVCountry"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/TVCountry"/>
    <TextView
            android:text="@string/phone_number_256703544310"
            android:textSize="@dimen/TEXT_SMALL"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/TVPhonenumber" app:layout_constraintStart_toStartOf="@+id/TVEmail"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/TVEmail"/>
    <TextView
            android:text="@string/slack_username_fidelakiyo"
            android:textSize="@dimen/TEXT_SMALL"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/TVSlackusername" app:layout_constraintStart_toStartOf="@+id/TVPhonenumber"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/TVPhonenumber"/>

</android.support.constraint.ConstraintLayout>